--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <section id="formulario">
+            <div class="row">
+                <div class="col-lg-12 datos">
+                    <div class="form-group">
+                        <label for="usr">Name:</label>
+                        <!-- El id lo utilizaremos en el JS -->
+                        <input type="text" class="form-control" id="nombre">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 datos">
+                    <div class="form-group">
+                        <label for="usr">Password:</label>
+                        <!-- El id lo utilizaremos en el JS -->
+                        <input type="text" class="form-control" id="password">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <!-- Usaremos la funcion onclick en el js -->
+                    <button type="button" class="btn btn-primary" onclick="guardarDatos()" value="Guardar Datos">Guardar datos</button>
+                </div>
+            </div>
+        </section>
+    </div>
 
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
