--- a/index.html
+++ b/index.html
@@ -38,9 +38,21 @@
                     <button type="button" class="btn btn-primary" onclick="guardarDatos()" value="Guardar Datos">Guardar datos</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p id="datos">
+                        Pulsa para ver tu nombre y tu password.
+                    </p>
+                    <button type="button" class="btn btn-primary" onclick="recuperarDatos()" value="Recuperar datos">Recuperar datos</button>
+                </div>
+            </div>
         </section>
     </div>
 
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 
